Use java.time.Duration and java.time.Instant in TKit.waitForFileCreated(). Make it public.